--- a/pagina5.html
+++ b/pagina5.html
@@ -15,7 +15,7 @@
                <img class="continer"src="imagenes/image3.png" align="right">
                <img class="continer"src="imagenes/imag2.png" align="right">
 
-          <input type="text" class="busqueda">
+          <input type="text" placeholder="Buscar" class="busqueda">
           <br><br>
           <div class="menu">
               <nav>
@@ -34,8 +34,7 @@
              <img class="imagen1"src="imagenes/nosoyunrobot.jpg" >
              <img class="imagen2" src="imagenes/wdosmundos.jpg">
              <img class="imagen3" src="imagenes/heredero.jpg">
-             <img class="imagen4" src="imagenes/boysoverflowers.jpg">
-             
+             <img class="imagen4" src="imagenes/boysoverflowers.jpg">          
              <img class="imagen5"src="imagenes/elhadadelaspesas.jpg">
              <img class="imagen6"src="imagenes/pinocho.jpg">   
              
