--- a/index.html
+++ b/index.html
@@ -186,6 +186,6 @@
     const fs = firebase.firestore();
 </script> 
 <!-- js personalizado -->
-<script src="assets/js/script.js"></script>
+<script src="js/script.js"></script>
   </body>
 </html>
